Maquetacion de LOGIN
Creacion de un div enviarYErrores para manipular el evento Login (script.js).
Asimismo, agrego ID's precisos dentro de ese div para aplicar Flexbox.

--- a/login.html
+++ b/login.html
@@ -28,9 +28,17 @@
                 <label for="exampleInputPassword1">Password</label>
                 <input type="password" class="form-control" id="inputPassword">
             </div>
-            
-            <button type="submit" class="btn btn-primary" id="log-in">Log in</button>
-            <p>¿No estás <span style="width: bolder;">registrado</span> todavía? Haz click <a style="width: bolder;" href="registro.html">AQUI</a></p>
+            <div id="enviarYErrores">
+                <div id="enviar">
+                    <button type="submit" class="btn btn-primary" id="log-in">Log in</button>
+                    <p>¿No estás <span style="width: bolder;">registrado</span> todavía? Haz click <a style="width: bolder;" href="registro.html">AQUI</a></p>
+                </div>
+                <div>
+                    <ul id="errores">
+                    
+                    </ul>
+                </div>
+            </div>
         </form>
 
     </div>
