--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inventario</title>
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <!-- Check no logueado -->
+    <script src="js/noLogin.js"></script>
 </head>
 <body>
 
     <h1>Inventario</h1>
-    
-    <script src="js/script.js"></script>
+
+    <button type="submit" id="cerrarSesion"><i class="fas fa-sign-out-alt">Cerrar sesion</i></button>
+    <script src="js/index.js"></script>
 </body>
 </html>
