--- a/productos.html
+++ b/productos.html
@@ -16,8 +16,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Agregar +<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Productos</a>
+            <a class="nav-item nav-link" href="#">Agregar +</a>
+            <a class="nav-item nav-link active" href="#">Productos<span class="sr-only">(current)</span></a>
           </div>
         </div>
       </nav>
@@ -27,21 +27,66 @@
         
     <h1>Productos</h1>
     
-    <button type="button" class="btn btn-success">Agregar +</button> 
+    <button type="button" class="btn btn-success"><a class="botonAgregar" href="agregarProductos.html">Agregar +</a></button>
     <button type="button" class="btn btn-danger">Eliminar todo</button>
 
     <div class="row">
         <div class="col-12 col-md-1">
-            #
-        </div>
+          <br>  # 
+        </div>    
     <div class="col-12 col-md-5">
-        Nombre del producto
+      <br> Nombre del producto 
     </div>
     <div class="col-12 col-md-3">
-       Cantidad
+      <br> Cantidad 
     </div>
     <div class="col-12 col-md-3">
-        Precio
+      <br>  Precio 
+    </div>
+    <div class="col-12 col-md-1">
+      <br><span id="numeral1"></span>
+      </div>
+      <div class="col-12 col-md-5">
+        <br> <span id="nombreProducto1"></span>
+    </div>
+    <div class="col-12 col-md-3">
+      <br> <span id="cantidadProducto1"></span>
+    </div>
+    <div class="col-12 col-md-2">
+      <br> <span id="precioProducto1"></span>
+    </div>
+    <div class="col-12 col-md-1">
+      <br><button type="button" class="btn btn-eliminar1">X</button><br>
+    </div>
+    <div class="col-12 col-md-1">
+      <br>  <span id="numeral2"></span>
+      </div>
+      <div class="col-12 col-md-5">
+        <br> <span id="nombreProducto2"></span>
+    </div>
+    <div class="col-12 col-md-3">
+      <br> <span id="cantidadProducto2"></span>
+    </div>
+    <div class="col-12 col-md-2">
+      <br>  <span id="precioProducto2"></span>
+    </div>
+    <div class="col-12 col-md-1">
+      <br><button type="button" class="btn btn-eliminar2">X</button><br>
+      </div>
+     <div class="col-12 col-md-1">
+      <br><span id="numeral3"></span>
+      </div>
+      <div class="col-12 col-md-5">
+        <br><span id="nombreProducto3"></span>
+    </div>
+    <div class="col-12 col-md-3">
+      <br><span id="cantidadProducto3"></span>
+    </div>
+    <div class="col-12 col-md-2">
+      <br><span id="precioProducto3"></span>
+    </div>
+    <div class="col-12 col-md-1">
+      <br><button type="button" class="btn btn-eliminar3">X</button><br>
     </div>
 </div>
 
