--- a/productos.html
+++ b/productos.html
@@ -30,8 +30,8 @@
     <button type="button" class="btn btn-success"><a class="botonAgregar" href="agregarProductos.html">Agregar +</a></button>
     <button type="button" class="btn btn-danger">Eliminar todo</button>
 
-    <div class="row">
-        <div class="col-12 col-md-1">
+    <div id="listaProductos" class="col">
+        <!-- <div class="col-12 col-md-1">
           <br>  # 
         </div>    
     <div class="col-12 col-md-5">
@@ -43,21 +43,27 @@
     <div class="col-12 col-md-3">
       <br>  Precio 
     </div>
+
     <div class="col-12 col-md-1">
       <br><span id="numeral1"></span>
       </div>
+
       <div class="col-12 col-md-5">
         <br> <span id="nombreProducto1"></span>
     </div>
+
     <div class="col-12 col-md-3">
       <br> <span id="cantidadProducto1"></span>
     </div>
+
     <div class="col-12 col-md-2">
       <br> <span id="precioProducto1"></span>
     </div>
+    
     <div class="col-12 col-md-1">
       <br><button type="button" class="btn btn-eliminar1">X</button><br>
     </div>
+
     <div class="col-12 col-md-1">
       <br>  <span id="numeral2"></span>
       </div>
@@ -85,9 +91,11 @@
     <div class="col-12 col-md-2">
       <br><span id="precioProducto3"></span>
     </div>
+
     <div class="col-12 col-md-1">
       <br><button type="button" class="btn btn-eliminar3">X</button><br>
-    </div>
+    </div> -->
+    
 </div>
 
 </section>
