--- a/index.html
+++ b/index.html
@@ -9,19 +9,6 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">STOCKEATE</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Agregar +<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Productos</a>
-          </div>
-        </div>
-      </nav>
-
 
 
       <div class="container-fluid landing">
@@ -34,11 +21,11 @@
     
         <div class="row">
         <div class="col-3 col-md-3 button-landing">
-            <button type="button"  class="btn btn-secondary btn-lg">Iniciar sesión</button> 
+          <a href="login.html"><button type="button" class="btn btn-secondary btn-lg botones-ini">Iniciar sesión</button> </a>
         </div>
 
         <div class="col-3 col-md-3 button-landing">
-            <button type="button" class="btn btn-secondary btn-lg">Registrarse</button>
+          <a href="registro.html"> <button type="button" class="btn btn-secondary btn-lg botones-ini">Registrarse</button> </a>
         </div>
         </div>
     
