--- a/productos.html
+++ b/productos.html
@@ -30,73 +30,37 @@
     <button type="button" class="btn btn-success"><a class="botonAgregar" href="agregarProductos.html">Agregar +</a></button>
     <button type="button" class="btn btn-danger">Eliminar todo</button>
 
-    <div id="listaProductos" class="col">
-        <!-- <div class="col-12 col-md-1">
-          <br>  # 
-        </div>    
-    <div class="col-12 col-md-5">
-      <br> Nombre del producto 
-    </div>
-    <div class="col-12 col-md-3">
-      <br> Cantidad 
-    </div>
-    <div class="col-12 col-md-3">
-      <br>  Precio 
-    </div>
-
-    <div class="col-12 col-md-1">
-      <br><span id="numeral1"></span>
-      </div>
-
-      <div class="col-12 col-md-5">
-        <br> <span id="nombreProducto1"></span>
-    </div>
-
-    <div class="col-12 col-md-3">
-      <br> <span id="cantidadProducto1"></span>
-    </div>
-
-    <div class="col-12 col-md-2">
-      <br> <span id="precioProducto1"></span>
-    </div>
-    
-    <div class="col-12 col-md-1">
-      <br><button type="button" class="btn btn-eliminar1">X</button><br>
-    </div>
-
-    <div class="col-12 col-md-1">
-      <br>  <span id="numeral2"></span>
-      </div>
-      <div class="col-12 col-md-5">
-        <br> <span id="nombreProducto2"></span>
-    </div>
-    <div class="col-12 col-md-3">
-      <br> <span id="cantidadProducto2"></span>
-    </div>
-    <div class="col-12 col-md-2">
-      <br>  <span id="precioProducto2"></span>
-    </div>
-    <div class="col-12 col-md-1">
-      <br><button type="button" class="btn btn-eliminar2">X</button><br>
-      </div>
-     <div class="col-12 col-md-1">
-      <br><span id="numeral3"></span>
-      </div>
-      <div class="col-12 col-md-5">
-        <br><span id="nombreProducto3"></span>
-    </div>
-    <div class="col-12 col-md-3">
-      <br><span id="cantidadProducto3"></span>
-    </div>
-    <div class="col-12 col-md-2">
-      <br><span id="precioProducto3"></span>
-    </div>
-
-    <div class="col-12 col-md-1">
-      <br><button type="button" class="btn btn-eliminar3">X</button><br>
-    </div> -->
-    
-</div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Producto</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">Precio</th>
+          <th scope="col">Eliminar</th>
+        </tr>
+      </thead>
+      <tbody id="contenido">
+        <!-- <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+        </tr> -->
+      </tbody>
+    </table>
 
 </section>
 </div>
