Agregado de style al LOGIN
Se agregó back ground y empecé a acomodar y dar estilo al formulario

--- a/registro.html
+++ b/registro.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-    <div class="container"  id="main-registro">
+    <div class="container-fluid"  id="main-registro">
      
         <h1>Registrarse</h1>
         <p>Utilice una cuenta propia de email como nombre de usuario.</p>
