Modificación de Div´s y enlace de scripts
Se modificaron los divs de los errores que salen al iniciar sesión/registrarse y se vinculo el JS de siLogin

--- a/login.html
+++ b/login.html
@@ -33,11 +33,9 @@
                     <button type="submit" class="btn" id="log-in">Ingresar</button>
                     <p>¿No estás <span style="width: bolder;">registrado</span> todavía? Haz click <a style="width: bolder;" href="registro.html">AQUI</a></p>
                 </div>
-                <div>
-                    <ul id="errores">
+                <ul id="errores"></ul>
                     
-                    </ul>
-                </div>
+            </ul>
             </div>
         </form>
     </div>
