--- a/productos.html
+++ b/productos.html
@@ -15,10 +15,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <ul class="navbar-nav mr-auto">
             <a class="nav-item nav-link" href="#">Agregar +</a>
             <a class="nav-item nav-link active" href="#">Productos<span class="sr-only">(current)</span></a>
-          </div>
+          </ul>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="cerrarSesion()">Cerrar sesión</button>
         </div>
       </nav>
     
@@ -74,5 +75,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/funciones.js"></script>
+<script src="js/cerrarSesion.js"></script>
 </body>
 </html>
