--- a/productos.html
+++ b/productos.html
@@ -29,7 +29,7 @@
     <h1>Productos</h1>
     
     <button type="button" class="btn btn-success"><a class="botonAgregar" href="agregarProductos.html">Agregar +</a></button>
-    <button type="button" class="btn btn-danger">Eliminar todo</button><br/>
+    <button type="button" class="btn btn-danger" id="borrarLocalStorage">Eliminar todo</button><br/>
 
     
     <table class="table table-striped table-dark table-hover">
@@ -74,7 +74,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="js/funciones.js"></script>
+<script src="js/mostrarProductos.js"></script>
 <script src="js/cerrarSesion.js"></script>
 </body>
 </html>
