Modificaciones al lograr registrarse
Se modificó el texto del H2. Se modificaron los estilos del texto y el background del div "esExito"

--- a/registro.html
+++ b/registro.html
@@ -50,7 +50,7 @@
         
     </div>
     <div id="esExito" class="container oculto">
-        <h2>Te has registrado exitosamente! Ahora podrás loggearte e ingresar a la plataforma.</h2>
+        <h2>Te has registrado exitosamente! <br>Serás redireccionado al login en un instante.</h2>
     </div>
 </div>
     <!-- jQuery -->
