Sumo el icono/favicon a todos los archivos .html
-Además, se guarda la imagen del icono/favicon en la carpeta images

--- a/productos.html
+++ b/productos.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Listado de productos</title>
+    <!-- FontAwsome -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <!-- icon/favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 </head>
 <body onload=borrarItem()>
 
