--- a/agregarProductos.html
+++ b/agregarProductos.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Ingresos al stock</title>
+    <!-- FontAwsome -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <!-- icon/favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -38,7 +42,7 @@
             <input type="text" id="precio" name="precio"> <br/><br/>
 
         <br/> <button type="submit" class="btn btn-success" id="guardarProducto">Guardar</button> 
-        <button type="button" class="btn btn-success"><a class="botonLista" href="Productos.html">Ver lista</a></button> 
+        <a role="button" class="botonLista" href="Productos.html"><button type="button" class="btn btn-success">Ver lista</button></a> 
     </form>
 
 </section>
