--- a/login.html
+++ b/login.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!-- CSS propio -->
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    <!-- FontAwsome -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <!-- icon/favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Check siLogin -->
     <script src='js/siLogin.js'></script>
 </head>
