Agregué href de agregarProductos.
Añadí el href de agregarProductos a productos.html.

--- a/productos.html
+++ b/productos.html
@@ -21,7 +21,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav mr-auto">
-            <a class="nav-item nav-link" href="#">Agregar +</a>
+            <a class="nav-item nav-link" href="agregarProductos.html">Agregar +</a>
             <a class="nav-item nav-link active" href="#">Productos<span class="sr-only">(current)</span></a>
           </ul>
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="cerrarSesion()">Cerrar sesión</button>
