--- a/agregarProductos.html
+++ b/agregarProductos.html
@@ -41,7 +41,7 @@
         <label for="precio">Precio:</label> <br/>
             <input type="text" id="precio" name="precio"> <br/><br/>
 
-        <br/> <button type="submit" class="btn btn-success" id="guardarProducto">Guardar</button> 
+        <br/> <button type="submit" class="btn btn-success" id="guardarProducto">Agregar producto</button> 
         <a role="button" class="botonLista" href="Productos.html"><button type="button" class="btn btn-success">Ver lista</button></a> 
     </form>
 
