Cambio de estilo en button "Cerrar sesión"
Se cambió a color rojo el "Cerrar sesión"

--- a/productos.html
+++ b/productos.html
@@ -24,7 +24,7 @@
             <a class="nav-item nav-link" href="agregarProductos.html">Agregar +</a>
             <a class="nav-item nav-link active" href="#">Productos<span class="sr-only">(current)</span></a>
           </ul>
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="cerrarSesion()">Cerrar sesión</button>
+          <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" onclick="cerrarSesion()">Cerrar sesión</button>
         </div>
       </nav>
     
