--- a/agregarProductos.html
+++ b/agregarProductos.html
@@ -22,7 +22,7 @@
       <ul class="navbar-nav mr-auto">
         <a class="nav-item nav-link active" href="#">Agregar +<span class="sr-only">(current)</span></a>
       </ul>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" onclick="cerrarSesion()">Cerrar sesión</button>
+      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" onclick="cerrarSesion()">Cerrar sesión</button>
     </div>
   </nav>
     
