agrego href y cambio el texto del tag <a>

--- a/agregarProductos.html
+++ b/agregarProductos.html
@@ -20,7 +20,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="navbar-nav mr-auto">
-        <a class="nav-item nav-link active" href="#">Agregar +<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="productos.html">Ver listado<span class="sr-only">(current)</span></a>
       </ul>
       <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" onclick="cerrarSesion()">Cerrar sesión</button>
     </div>
