--- a/agregarProductos.html
+++ b/agregarProductos.html
@@ -42,7 +42,7 @@
             <input type="text" id="precio" name="precio"> <br/><br/>
 
         <br/> <button type="submit" class="btn btn-success" id="guardarProducto">Agregar producto</button> 
-        <a role="button" class="botonLista" href="Productos.html"><button type="button" class="btn btn-success">Ver lista</button></a> 
+        <a role="button" class="botonLista" href="productos.html"><button type="button" class="btn btn-success">Ver lista</button></a> 
     </form>
 
 </section>
