corrección del texto del label del mail

--- a/registro.html
+++ b/registro.html
@@ -26,7 +26,7 @@
         
         <form>
             <div class="form-group">
-                <label for="exampleInputEmail1">Ingrese su email/usuario</label>
+                <label for="exampleInputEmail1">Ingrese su email</label>
                 <input type="email" class="form-control" id="crearEmail" aria-describedby="emailHelp">
                 <small id="emailHelp" class="form-text">Su mail no será usado para compartir informacion a terceros.</small>
             </div>
